--- a/resources/frontend_client/index_template.html
+++ b/resources/frontend_client/index_template.html
@@ -9,7 +9,7 @@
 
         {{{embed_code}}}
 
-        <title>Metabase</title>
+        <title>Softheon - Foundry</title>
 
         <base href={{{base_href}}} />
 
