--- a/resources/frontend_client/init.html
+++ b/resources/frontend_client/init.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Metabase</title>
+    <title>Softheon - Foundry</title>
 
     <style media="screen">
       * {
         padding: 0;
         margin: 0;
-        font-family: Lato, 'Helvetica Neue', Helvetica, sans-serif;
+        font-family: Segoe UI;
       }
       progress[value] {
         -webkit-appearance: none;
